--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redeem-store",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zeroexu.github.io/redeem-store",
   "dependencies": {
     "axios": "^0.19.0",
     "node-sass": "^4.13.0",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
