--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "homepage": "https://zeroexu.github.io/redeem-store",
   "dependencies": {
     "axios": "^0.19.0",
-    "confirm-dialog": "^0.1.2",
     "gh-pages": "^2.1.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "typescript": "^3.7.2"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
